update controller, endpoints and docs
